[package]
name = "mbtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = true 
codegen-units = 1


[dependencies]
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"